--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
+    <script src="/src/Pokecard.js" type="text/JSX"></script>
+    <script src="/src/Pokedex.js" type="text/JSX"></script>
+    <script src="/src/App.js" type="text/JSX"></script>
+    <script src="/src/index.js" type="text/JSX"></script>
   </body>
 </html>
